# AnkiOps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.gemini/: GEMINI.md
.github/workflows/: publish.yml  test.yml
anki_addon/: __init__.py  actions.py  ankiops_connect_actions.py  ankiops_connect_host.py  bridge_actions.py  bridge_host.py  collection.py  config.json  config.md  host.py  manifest.json  note_type_conversion.py  note_types.py  protocol.py  toolbar.py
ankiops/: __init__.py  ai.py  anki.py  anki_client.py  anki_manifest.py  anki_rpc.py  anki_to_markdown.py  ankiops_bridge.py  cli.py  cli_ai.py  cli_anki.py  cli_commands.py  collab.py  collection.py  collection_serializer.py  config.py  console.py  db.py  db_schema.py  deck_sources.py  export_notes.py  fingerprints.py  fs.py  git.py  html_converter.py  html_to_markdown.py  image_widths.py  import_notes.py  init.py  interchange.py  key_map.py  log.py  markdown.py  markdown_converter.py  markdown_format.py  markdown_helpers.py  markdown_to_anki.py  markdown_to_html.py  math_delimiters.py  media.py  (+14 more)
ankiops/ai/: __init__.py  client.py  config_utils.py  errors.py  model_config.py  model_profiles.py  orchestration.py  paths.py  (+11 more)
deckops/: __init__.py  anki_client.py  anki_to_markdown.py  cli.py  collection_package.py  config.py  ensure_models.py  git.py  html_converter.py  markdown_converter.py  markdown_helpers.py  markdown_to_anki.py
docs/: cli-output.md  deleted-deck-git-snapshot-bug.md  git_operations.md  module-architecture-plan.md  sync-test-contract.md
scripts/: benchmark_collection_serializer.py  benchmark_sync.py
tests/: conftest.py  test_change_detection.py  test_choice.py  test_cloze.py  test_cloze_hide_all.py  test_collection_package.py  test_collection_serializer.py  test_converters.py  test_db.py  test_html_converter.py  test_integration.py  test_key_map.py  test_key_map_recovery.py  test_key_mapping.py  test_markdown_converter.py  test_media_sync.py  test_note_models.py  test_note_type_config.py  test_properties.py  test_roundtrip.py  test_sync.py
(+322 files in other folders)
