[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankiops"
version = "0.5.9"
description = "Anki ↔ Markdown, with bidirectional sync, custom note types, and LLM integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "blake3>=1.0.8",
    "html-to-markdown>=3.3.2,<3.4.0",
    "mistune>=3.2.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "PyYAML>=6.0.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
]
[project.urls]
Repository = "https://github.com/visserle/AnkiOps"
Issues = "https://github.com/visserle/AnkiOps/issues"

[project.scripts]
ankiops = "ankiops.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.152.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.11",
    "types-PyYAML>=6.0.12.20260408",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ankiops*"]

[tool.setuptools.package-data]
ankiops = [
    "tutorial/*.md",
    "note_types/**/*.anki",
    "note_types/**/*.css",
    "note_types/**/*.yaml",
    "llm/*.yaml",
    "llm/_system_prompt.md",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F"]
extend-select = ["I"]
unfixable = ["F401"]  # do not auto-remove unused imports

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
markers = ["live_llm: opt-in tests that call real external LLM models"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
